Moved experimental commands and core developer commands into standard-feeds directory, though they're not auto-subscribed standard feeds; they're linked to from about:ubiquity using a new feed.html redirector.
--HG--
rename : ubiquity/chrome/content/core-developer-commands.html => ubiquity/standard-feeds/core-developer-commands.html
rename : ubiquity/chrome/content/core-developer-commands.js => ubiquity/standard-feeds/core-developer-commands.js
rename : ubiquity/chrome/content/experimental-commands.html => ubiquity/standard-feeds/experimental-commands.html
rename : ubiquity/chrome/content/experimental-commands.js => ubiquity/standard-feeds/experimental-commands.js

--- a/ubiquity/standard-feeds/core-developer-commands.html
+++ b/ubiquity/standard-feeds/core-developer-commands.html
@@ -5,7 +5,7 @@
   <title>Ubiquity Core Developer Commands</title>
   <link rel="commands" href="core-developer-commands.js"/>
   <link rel="stylesheet" type="text/css" media="all"
-        href="../../docs/docs.css" />
+        href="../docs/docs.css" />
 </head>
 <body>
 <div id="content">
@@ -19,7 +19,7 @@
 </div>
 </div>
 </body>
-<script src="../../scripts/jquery.js"></script>
-<script src="../../scripts/wikicreole.js"></script>
-<script src="../../docs/docs.js"></script>
+<script src="../scripts/jquery.js"></script>
+<script src="../scripts/wikicreole.js"></script>
+<script src="../docs/docs.js"></script>
 </html>
