--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -91,10 +91,12 @@
   
   <p>Run the <a href="test.html">unit tests</a>.</p>
 
-  <!-- <p>Help us test our 
-    <a href="chrome://ubiquity/content/experimental-commands.html">
-      experimental commands</a>!</p> -->
-      
+  <p>Help us test our <a href="feed.html#experimental-commands.html">
+    experimental commands</a>!  And if you're going to be developing
+    Ubiquity itself, check out our <a
+    href="feed.html#core-developer-commands.html">core developer
+    commands</a>.</p>
+
   <div id="command-feed-graveyard-div">
     <h2>Feed Graveyard</h2>
     <p>
