Moved the docs directory into the scripts directory.
--HG--
rename : ubiquity/docs/docs.css => ubiquity/scripts/docs/docs.css
rename : ubiquity/docs/docs.js => ubiquity/scripts/docs/docs.js

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" media="all"
-        href="docs/docs.css" />
+        href="scripts/docs/docs.css" />
   <title>Ubiquity Code Documentation</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
 </body>
 <script src="scripts/jquery.js"></script>
 <script src="scripts/wikicreole.js"></script>
-<script src="docs/docs.js"></script>
+<script src="scripts/docs/docs.js"></script>
 <script>
   var XUL_PLANET_URL_TEMPLATE = "http://www.xulplanet.com/references/" +
                                 "xpcomref/ifaces/%QUERY%.html";
