--- a/ubiquity/standard-feeds/core-developer-commands.html
+++ b/ubiquity/standard-feeds/core-developer-commands.html
@@ -5,7 +5,7 @@
   <title>Ubiquity Core Developer Commands</title>
   <link rel="commands" href="core-developer-commands.js"/>
   <link rel="stylesheet" type="text/css" media="all"
-        href="../docs/docs.css" />
+        href="../scripts/docs/docs.css" />
 </head>
 <body>
 <div id="content">
@@ -21,5 +21,5 @@
 </body>
 <script src="../scripts/jquery.js"></script>
 <script src="../scripts/wikicreole.js"></script>
-<script src="../docs/docs.js"></script>
+<script src="../scripts/docs/docs.js"></script>
 </html>
