--- a/ubiquity/standard-feeds/core-developer-commands.html
+++ b/ubiquity/standard-feeds/core-developer-commands.html
@@ -4,8 +4,6 @@
 <head>
   <title>Ubiquity Core Developer Commands</title>
   <link rel="commands" href="core-developer-commands.js"/>
-  <link rel="stylesheet" type="text/css" media="all"
-        href="scripts/docs/docs.css" />
 </head>
 <body>
 <div id="content">
@@ -19,7 +17,5 @@
 </div>
 </div>
 </body>
-<script src="scripts/jquery.js"></script>
-<script src="scripts/wikicreole.js"></script>
-<script src="scripts/docs/docs.js"></script>
+<script src="feed.js"></script>
 </html>
