The 'Thanks for trying Ubiquity 0.1.5!' heading text on about:ubiquity is now dynamically generated, so the user can always go to about:ubiquity to easily see what version of ubiquity they have. In fact, any span with a class of "version" is automatically filled-in with the current version of ubiquity on this page.
I thought there was a trac ticket for this somewhere but I couldn't find it.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -110,7 +110,9 @@
 
 
 <div class="col-four">
-  <h2 class="top">Thanks for trying out Ubiquity 0.1.5!</h2>
+  <!-- The empty version span below is automatically filled in later. -->
+  <h2 class="top">Thanks for trying out Ubiquity <span
+  class="version"></span>!</h2>
 
   <p>Read the Ubiquity <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.5_Release_Notes">0.1.5 Release Notes</a> for information on exactly what changed.</p>
 
