Changed version back to 0.2pre7 and changed the about:ubiquity text to be 0.2-relevant again.  Note that we've already released 0.2pre7; we'll change the version to 0.2pre8 once we're ready to release it.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -114,10 +114,8 @@
   <h2 class="top">Thanks for trying out Ubiquity <span
   class="version"></span>!</h2>
 
-  <p>Read the Ubiquity <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.5_Release_Notes">0.1.5 Release Notes</a> for information on exactly what changed.</p>
-
   <p>For information about the goals of the upcoming 0.2 release of Ubiquity, check out our <a href="https://wiki.mozilla.org/Labs/Ubiquity/0.2_Design:_UI_and_Security_Extensibility">design document</a>. It has diagrams!</p>
-  <!--<p>Also, check out our <a href="locked-down-feed-plugin/example.html">example Locked-Down Feed Plugin command feed</a>.  This feed is executed in a super-restricted sandbox so that it can't do anything harmful to your computer.</p>-->
+  <p>Also, check out our <a href="locked-down-feed-plugin/example.html">example Locked-Down Feed Plugin command feed</a>.  This feed is executed in a super-restricted sandbox so that it can't do anything harmful to your computer.</p>
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
   <h2 class="top">Introduction Movie</h2>
