--- a/ubiquity/chrome/content/skinlist.html
+++ b/ubiquity/chrome/content/skinlist.html
@@ -50,7 +50,7 @@
       Clicking save immediately updates Ubiquity's look.
     </li>
     <br/><br/>
-      <div class="warning">If you are using Windows, then any changes you make to a custom skin can only be seen after a browser restart. This is a <a href="http://labs.toolness.com/trac/ticket/449">known bug</a>.</div>
+      <div class="warning">If you are using Windows, then any changes you make to a custom skin can only be seen after a browser restart. This is a <a href="http://ubiquity.mozilla.com/trac/ticket/449">known bug</a>.</div>
     <br/><br/>
     <li>
       <textarea rows="30" style="width:750px" id="skin-editor"></textarea>
