--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -662,7 +662,7 @@ CmdUtils.CreateCommand({
   name: "yelp",
   takes: { "restaurant":noun_arb_text },
   // TODO: Should be noun_type_address, which is currently broken.
-  // See http://labs.toolness.com/trac/ticket/44
+  // See http://ubiquity.mozilla.com/trac/ticket/44
   modifiers: { near:noun_arb_text },
   icon: "http://www.yelp.com/favicon.ico",
   description: "Searches <a href=\"http://www.yelp.com\">Yelp</a> for restaurants matching your words.",
