--- a/ubiquity/chrome/content/bug19warning.html
+++ b/ubiquity/chrome/content/bug19warning.html
@@ -11,7 +11,7 @@
 <body>
 <h1>A transparent message couldn't be displayed!</h1>
 <p>Ubiquity tried to display a transparent message but failed.  Due to
-a <a href="http://labs.toolness.com/trac/ticket/19">bug in
+a <a href="http://ubiquity.mozilla.com/trac/ticket/19">bug in
 Ubiquity</a>, if you're using OS X, you may need
 to <a href="http://growl.info/">install Growl</a> if you haven't
 already done so.</p>
