--- a/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
+++ b/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
@@ -11,7 +11,7 @@
   <div class="command" id="eat-cmd">
     <div class="name">eat</div>
     <div class="direct-object">food</div>
-    <div class="preview-text">Eats the given <i>food</i>.</div>
+    <div class="preview">Eats the given <i>food</i>.</div>
   </div>
 </div>
 </body>
