--- a/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
+++ b/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <link rel="webpage-commands" type="text/html" href="wpfp-example.html" />
+  <link rel="webpage-commands" type="text/html" href="" />
   <title>Webpage Commands</title>
 </head>
 <body>
