Added skeleton support for content-space iframe previews in WPFP.  It doesn't actually do anything other than display the target iframe preview in the preview block, though.

--- a/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
+++ b/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
@@ -11,7 +11,7 @@
   <div class="command" id="eat-cmd">
     <div class="name">eat</div>
     <div class="direct-object">food</div>
-    <div class="preview">Eats the given <i>food</i>.</div>
+    <a class="preview" href=""></a>
   </div>
 </div>
 </body>
