--- a/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
+++ b/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
@@ -11,7 +11,7 @@
   <div class="command" id="eat-cmd">
     <div class="name">eat</div>
     <div class="direct-object">food</div>
-    <a class="preview" href=""></a>
+    <a class="preview" href="wpfp-example-preview.html"></a>
   </div>
 </div>
 </body>
