--- a/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example-preview.html
+++ b/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example-preview.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-  <title>Webpage Command Preview</title>
-</head>
+<html>
 <body>
 <div id="preview-content">hi.</div>
 </body>
