Added a bit of 'documentation' to the WPFP example feed.

--- a/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
+++ b/ubiquity/standard-feeds/webpage-feed-plugin/wpfp-example.html
@@ -1,9 +1,12 @@
 <html>
 <head>
   <link rel="webpage-commands" type="text/html" href="" />
-  <title>Webpage Commands</title>
+  <title>Webpage Feed Plugin Example Commands</title>
 </head>
 <body>
+This page defines some example Ubiquity commands using the
+experimental Webpage Feed Plugin (WPFP). Try viewing the source
+code of this page to see what they are.
 </body>
 <script src="ubiquity.js"></script>
 <script>
