Added a button to start jsbridge.

--- a/ubiquity/chrome/content/bootstrap.html
+++ b/ubiquity/chrome/content/bootstrap.html
@@ -8,6 +8,7 @@
 <body>
 <input type="button" value="Bootstrap!" onclick="startInstall();">
 <input type="button" value="Unbootstrap!" onclick="killInstall();">
+<input type="button" value="Start jsbridge" onclick="startJsbridge();">
 <pre id="install-log"></pre>
 </div>
 </body>
