--- a/ubiquity/chrome/content/bootstrap.html
+++ b/ubiquity/chrome/content/bootstrap.html
@@ -6,8 +6,16 @@
   <title>Attempt to bootstrap Python.</title>
 </head>
 <body>
-<input type="button" value="Bootstrap!" onclick="startInstall();">
-<input type="button" value="Unbootstrap!" onclick="killInstall();">
+<div id="instructions">
+<p>You can use the buttons below to bootstrap jsbridge and start it.</p>
+<p>Once you've started jsbridge, you can start the jsbridge Python
+command-line shell by executing the following in a terminal window:</p>
+<pre id="jsbridge-client-cmdline"></pre>
+<p>You can learn more about using jsbridge <a href="http://code.google.com/p/jsbridge/wiki/UsingJSBridge">here</a>.</p>
+<p>Note that this doesn't work under Windows yet.</p>
+</div>
+<input type="button" value="Bootstrap jsbridge" onclick="startInstall();">
+<input type="button" value="Unbootstrap jsbridge" onclick="killInstall();">
 <input type="button" value="Start jsbridge" onclick="startJsbridge();">
 <pre id="install-log"></pre>
 </div>
