Linked to source code in HTML of python command feed.

--- a/ubiquity/python/example_feed.html
+++ b/ubiquity/python/example_feed.html
@@ -6,6 +6,7 @@
   <title>Sample Python Command Feed</title>
 </head>
 <body>
-Sample Python Commands.
+This is an example Python command feed. The source code is
+<a href="example_feed.py">here</a>.
 </body>
 </html>
