Added documentation for eventhub.js.
--HG--
extra : rebase_source : c57f48c7d52d80c3bcd07f859c8ce781197901c1

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -22,6 +22,8 @@
     <li><a class="intra-wiki"
            href="#feed-parts/header/cmdutils.js">CmdUtils</a></li>
     <li><a class="intra-wiki"
+           href="#modules/eventhub.js">EventHub</a>
+    <li><a class="intra-wiki"
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a>
   </ul>
