Intra-wiki links aren't actually turned into links if they link to the page that the user is currently reading.
--HG--
extra : rebase_source : 35957d9b4fffacbca1aeb7ff384e0fcfa4f31a2b

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -60,10 +60,12 @@
                             XUL_PLANET_URL_TEMPLATE.replace("%QUERY%",
                                                             text));
           } else {
-            if (text in INTRA_DOC_LINKS)
-              $(this).wrap('<a class="intra-wiki" href="#' +
-                           INTRA_DOC_LINKS[text] +
-                           '"></a>');
+            if (text in INTRA_DOC_LINKS) {
+              var href = "#" + INTRA_DOC_LINKS[text];
+              if (window.location.hash != href)
+                $(this).wrap('<a class="intra-wiki" href="' + href +
+                             '"></a>');
+            }
           }
         });
     });
