Added documentation for WebJsModule.
--HG--
extra : rebase_source : cbffc2a24124112ff358049a1fa6470367c9c7fd

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -24,6 +24,8 @@
     <li><a class="intra-wiki"
            href="#modules/eventhub.js">EventHub</a>
     <li><a class="intra-wiki"
+           href="#modules/webjsm.js">WebJsModule</a>
+    <li><a class="intra-wiki"
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a>
   </ul>
