Added some documentation for FeedManager.  Still need to add documentation for the Feed object, though.
--HG--
extra : rebase_source : 2f9f5ce802ca731c5f1298eb544ff3f546cbdc61

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -26,6 +26,8 @@
     <li><a class="intra-wiki"
            href="#modules/webjsm.js">WebJsModule</a>
     <li><a class="intra-wiki"
+           href="#modules/feedmanager.js">FeedManager</a>
+    <li><a class="intra-wiki"
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a>
   </ul>
@@ -45,7 +47,9 @@
   var INTRA_DOC_LINKS = {
     FeedManager: "modules/feedmanager.js",
     WebJsModule: "modules/webjsm.js",
-    EventHub: "modules/eventhub.js"
+    EventHub: "modules/eventhub.js",
+    AnnotationService: "modules/annotation_memory.js",
+    LockedDownFeedPlugin: "modules/locked_down_feed_plugin.js"
   }
 
   App.processors.push(
