Added documentation for AnnotationService.
--HG--
extra : rebase_source : 80a791650f19897cd406fb5d42de0ccddd6f3d0e

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -28,6 +28,8 @@
     <li><a class="intra-wiki"
            href="#modules/feedmanager.js">FeedManager</a>
     <li><a class="intra-wiki"
+           href="#modules/annotation_memory.js">AnnotationService</a>
+    <li><a class="intra-wiki"
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a>
   </ul>
