Made documentation for Feed superclass and subclasses a bit easier to follow.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -48,6 +48,7 @@
 
   var INTRA_DOC_LINKS = {
     FeedManager: "modules/feedmanager.js",
+    Feed: "modules/feedmanager.js",
     WebJsModule: "modules/webjsm.js",
     EventHub: "modules/eventhub.js",
     AnnotationService: "modules/annotation_memory.js",
