Added an 'unbusy' class to bug report css.

--- a/ubiquity/chrome/content/report-bug.html
+++ b/ubiquity/chrome/content/report-bug.html
@@ -20,7 +20,8 @@
     ensure that you're comfortable contributing this information to
     the public domain.</p>
     <form id="form">
-      <input type="submit" value="Submit Bug Report" id="submit">
+      <input type="submit" value="Submit Bug Report" id="submit"
+             class="unbusy">
     </form>
     <div id="output"></div>
   </div>
