Renamed the LDFP's defineVerb() function to createCommand().

--- a/ubiquity/standard-feeds/locked-down-feed-plugin/example.html
+++ b/ubiquity/standard-feeds/locked-down-feed-plugin/example.html
@@ -28,7 +28,7 @@ window.addEventListener("load", init, false);
 
 verbs = [];
 
-function defineVerb(verb) {
+function createCommand(verb) {
   verbs.push(verb);
 }
 </script>
