--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -30,6 +30,8 @@
     <li><a class="intra-wiki"
            href="#modules/annotation_memory.js">AnnotationService</a>
     <li><a class="intra-wiki"
+           href="#modules/msgservice.js">Message Services</a>
+    <li><a class="intra-wiki"
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a>
   </ul>
@@ -52,6 +54,7 @@
     WebJsModule: "modules/webjsm.js",
     EventHub: "modules/eventhub.js",
     AnnotationService: "modules/annotation_memory.js",
+    MessageService: "modules/msgservice.js",
     LockedDownFeedPlugin: "modules/locked_down_feed_plugin.js"
   }
 
