Changed the LDFP global functions to match their DFP counterparts; thus locked-down command feeds are now a strict subset of default (chrome-privileged) command feeds.

--- a/ubiquity/standard-feeds/locked-down-feed-plugin/example.html
+++ b/ubiquity/standard-feeds/locked-down-feed-plugin/example.html
@@ -28,7 +28,9 @@ window.addEventListener("load", init, false);
 
 verbs = [];
 
-function createCommand(verb) {
+var CmdUtils = {};
+
+CmdUtils.CreateCommand = function CmdUtils_CreateCommand(verb) {
   verbs.push(verb);
 }
 </script>
