Added a note about restarting firefox to the bug 19 warning.

--- a/ubiquity/chrome/content/bug19warning.html
+++ b/ubiquity/chrome/content/bug19warning.html
@@ -14,7 +14,7 @@
 a <a href="http://ubiquity.mozilla.com/trac/ticket/19">bug in
 Ubiquity</a>, if you're using OS X, you may need
 to <a href="http://growl.info/">install Growl</a> if you haven't
-already done so.</p>
+already done so, and after that you may need to restart Firefox.</p>
 <p>Our apologies for the inconvenience.</p>
 </body>
 </html>
