The command editor now provides a drop-down through which the user can choose whether they're creating a locked-down feed or a standard feed.
--HG--
extra : rebase_source : 3662a323b6ac45fe93460ec88f404eca35eaa451

--- a/ubiquity/chrome/content/editor.html
+++ b/ubiquity/chrome/content/editor.html
@@ -36,7 +36,8 @@
 
     var file; 
     var lastModifiedTime = 0; 
-    function initialize() { 
+    function initialize() {
+      document.getElementById("feedTypeMenu").value = PrefCommands.type;
       document.getElementById("editor").value = PrefCommands.getCode();
       document.getElementById("enableSyntaxHighlighting").checked = getHighlighting();
       if (isSyntaxHighlightingBroken())
@@ -160,6 +161,13 @@
              size="20"
              style="cursor:pointer" 
              onchange="Editor.onSave()"/>
+    </div>
+    <div id="feed-type-pref">
+      The feed type is
+      <select id="feedTypeMenu" onchange="Editor.onFeedTypeChange()">
+        <option value="commands">commands</option>
+        <option value="locked-down-commands">locked-down-commands</option>
+      </select>
     </div>
     <br clear="all"/>
     <ul class="button-list">
