--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -840,7 +840,7 @@ function defineWord(word, callback) {
   });
 
   Utils.ajaxGet(url + params, function(xml) {
-    var text = jQuery(xml).find("WordDefinition").text();
+    var text = jQuery(xml).find("WordDefinition > Definitions > Definition:first-child > WordDefinition").text();
     callback(text);
   });
 }
@@ -851,22 +851,21 @@ CmdUtils.CreateCommand({
   help: "Try issuing &quot;define aglet&quot;",
   icon: "http://www.answers.com/favicon.ico",
   takes: {"word": noun_arb_text},
-  execute: function( directObj ) {
+  execute: function(directObj) {
     var word = directObj.text;
     Utils.openUrlInBrowser( "http://www.answers.com/" + escape(word) );
   },
-  preview: function( pblock, directObj ) {
+  preview: function(pblock, directObj) {
     var word = directObj.text;
-    if (word.length < 2)
+    if (word.length < 2) {
       pblock.innerHTML = "Gives the definition of a word.";
-    else {
+    } else {
       pblock.innerHTML = "Gives the definition of the word " + word + ".";
-      defineWord( word, function(text){
+      defineWord( word, function(text) {
         text = text.replace(/(\d+:)/g, "<br/><b>$&</b>");
         text = text.replace(/(1:)/g, "<br/>$&");
         text = text.replace(word, "<span style='font-size:18px;'>$&</span>");
         text = text.replace(/\[[^\]]*\]/g, "");
-
         pblock.innerHTML = text;
       });
     }
