Our root documentation for Ubiquity Code now links to standard feed docs.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -35,8 +35,11 @@
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a>
   </ul>
-  <p>If you're interested in creating a Feed Plugin, check out the
-  documentation for the proof-of-concept .</p>
+  <p>We also have some of our standard feeds documented:</p>
+  <ul>
+    <li><a href="standard-feeds/core-developer-commands.html">Core
+    Developer Commands</a></li>
+  </ul>
 </div>
 </div>
 </body>
