--- a/ubiquity/standard-feeds/core-developer-commands.html
+++ b/ubiquity/standard-feeds/core-developer-commands.html
@@ -12,7 +12,8 @@
   <p>This feed contains commands that are of use to Ubiquity core
     developers.</p>
   <ul>
-    <li><a href="#core-developer-commands.js">Command Feed Code</a></li>
+    <li><a class="intra-wiki"
+           href="#core-developer-commands.js">Command Feed Code</a></li>
   </ul>
 </div>
 </div>
