--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -302,7 +302,7 @@ CmdUtils.CreateCommand({
   license: "MPL",
   icon: "http://en.wikipedia.org/favicon.ico",
   description: "Searches Wikipedia for your words, in a given language.",
-  preview: CmdUtils.safePreview(function(previewBlock, directObject, mods) {
+  preview: function(previewBlock, directObject, mods) {
     var langCode = mods.in.data || "en";
     var apiUrl = "http://" + langCode + ".wikipedia.org/w/api.php";
 
@@ -368,7 +368,7 @@ CmdUtils.CreateCommand({
 
       }
     });
-  }),
+  },
   execute: function(directObject, mods) {
     var lang = mods.in.data || "en";
     var searchUrl = "http://" + lang + ".wikipedia.org/wiki/Special:Search";
