All preview DOM structure is now set in preview.html rather than being dynamically generated. Default preview help is now included in preview.html too.

--- a/ubiquity/chrome/content/preview.html
+++ b/ubiquity/chrome/content/preview.html
@@ -8,7 +8,14 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 </head>
 <body id="previewbody">
-<div id="ubiquity-preview"></div>
+<div id="ubiquity-preview">
+  <div id="suggestions"></div>
+  <div id="preview-pane" class="ubiquity-preview-content"></div>
+  <div id="help" class="help">
+    Type the name of a command and press enter to 
+    execute it, or <b>help</b> for assistance.
+  </div>
+</div>
 </body>
 <script src="preview.js"></script>
 </html>
