--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -114,11 +114,8 @@
   <h2 class="top">Thanks for trying out Ubiquity <span
   class="version"></span>!</h2>
 
+  <p>Version 0.1.7 of Ubiquity features security improvements, a safer way to write new commands, a new bug reporting feature, and more.  To learn about what's new, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.7_Release_Notes">Ubiquity 0.1.7 Release Notes</a>.</p>
   <p>For information about the goals of the upcoming 0.2 release of Ubiquity, check out our <a href="https://wiki.mozilla.org/Labs/Ubiquity/0.2_Design:_UI_and_Security_Extensibility">design document</a>. It has diagrams!</p>
-  <p>Also, check out our <a href="feed.html#locked-down-feed-plugin/example.html">example Locked-Down Feed Plugin command feed</a>.  This feed is executed in a super-restricted sandbox so that it can't do anything harmful to your computer.</p>
-  <p>Another one to try is our <a href="feed.html#webpage-feed-plugin/wpfp-example.html">example Webpage Feed Plugin command feed</a>, which is a web page that has the ability to provide commands to Ubiquity&mdash;if you give it permission.</p>
-  <p>If you're really brave and are using OS X or Linux, check out our <a href="file.html#python/example_feed.html">example Python Feed Plugin command feed</a>.</p>
-  <p>And if you have nerves of steel and use OS X, try out our super-experimental <a href="desktop-quicklaunch.html">Desktop QuickLaunch</a> feature.</p>
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
   <h2 class="top">Introduction Movie</h2>
