Fixes #629, but changes the access keys universally to ctrl+alt+number, rather than the keys being different for different platforms.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -20,7 +20,7 @@ corresponding feed is <a href="search.html">here</a>.</p>
 {forelse}
   <b>Your search - ${searchTerm} - did not match any documents. </b>
 {/for}
-<small>Tip: You can go to any result in this preview by using its number as an access key. (Linux and Windows: alt-number, Mac: control-number)</small>
+<small>Tip: You can go to any result in this preview by pressing control, alt, and the result number at the same time.</small>
 </div>
 <div id="amazon-search" style="display: none;">
 Found ${numitems} books on Amazon matching <b>${query}</b>
