Linked to 0.1.8 release notes on about:ubiquity.

--- a/ubiquity/chrome/content/about.html
+++ b/ubiquity/chrome/content/about.html
@@ -114,7 +114,7 @@
   <h2 class="top">Thanks for trying out Ubiquity <span
   class="version"></span>!</h2>
 
-  <p>Version 0.1.7 of Ubiquity features security improvements, a safer way to write new commands, a new bug reporting feature, and more.  To learn about what's new, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.7_Release_Notes">Ubiquity 0.1.7 Release Notes</a>.</p>
+  <p>Version 0.1.8 of Ubiquity is a maintenance release that fixes a number of bugs.  To learn about what's new, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.1.8_Release_Notes">Ubiquity 0.1.8 Release Notes</a>.</p>
   <p>For information about the goals of the upcoming 0.2 release of Ubiquity, check out our <a href="https://wiki.mozilla.org/Labs/Ubiquity/0.2_Design:_UI_and_Security_Extensibility">design document</a>. It has diagrams!</p>
   <p> Ubiquity is a team effort by contributors from all over the world. For a list of some of the contributors, check out the <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">credits</a> page.
 
