adding TNG-style arguments and EN+JA localized names to some more commands.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -177,6 +177,14 @@ Wikipedia articles found matching <b>${query}</b>:
 <script class="commands"><![CDATA[
 CmdUtils.CreateCommand({
   name: "search",
+  names: {
+    en: ['search','find','look for'],
+    ja: ['検索する','検索して','検索しろ','探す','探して','探せ','けんさくする','けんさくして','けんさくしろ','さがす','さがして','さがせ']
+  },
+  arguments: [
+    {role: 'object', nountype: 'text'},
+    {role: 'instrument', nountype: 'search engine'}
+  ],
   icon: "chrome://ubiquity/skin/icons/search.png",
   description: "Search using your installed search engines",
   takes: {query: noun_arb_text},
