adding Swedish parser to tng

--- a/ubiquity/modules/parser/tng/index.html
+++ b/ubiquity/modules/parser/tng/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript;version=1.8" charset='utf-8' src='ja.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='fr.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='da.js'></script>
+    <script type="text/javascript;version=1.8" charset='utf-8' src='sv.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='pt.js'></script>
     <script type="text/javascript;version=1.8" charset='utf-8' src='setup.js'></script>
     <style type="text/css">
@@ -107,6 +108,7 @@
     <input type='radio' name='lang' value='en' checked='checked'>English</input>
     <input type='radio' name='lang' value='ja'>Japanese</input>
     <input type='radio' name='lang' value='da'>Danish</input>
+    <input type='radio' name='lang' value='sv'>Swedish</input>
     <input type='radio' name='lang' value='pt'>Portuguese</input>
     <input type='radio' name='lang' value='fr'>French</input><!--
     (<input type='checkbox' value='spaces' name='spaces' id='spaces'>require spaces</input>)<br/>
