adding link to parser/tng/parser.js in the Code Illuminated documentation page.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -22,18 +22,20 @@
     <li><a class="intra-wiki"
            href="#feed-parts/header/cmdutils.js">CmdUtils</a></li>
     <li><a class="intra-wiki"
-           href="#modules/eventhub.js">EventHub</a>
+           href="#modules/eventhub.js">EventHub</a></li>
     <li><a class="intra-wiki"
-           href="#modules/webjsm.js">WebJsModule</a>
+           href="#modules/webjsm.js">WebJsModule</a></li>
     <li><a class="intra-wiki"
-           href="#modules/feedmanager.js">FeedManager</a>
+           href="#modules/feedmanager.js">FeedManager</a></li>
     <li><a class="intra-wiki"
-           href="#modules/annotation_memory.js">AnnotationService</a>
+           href="#modules/annotation_memory.js">AnnotationService</a></li>
     <li><a class="intra-wiki"
-           href="#modules/msgservice.js">Message Services</a>
+           href="#modules/msgservice.js">Message Services</a></li>
     <li><a class="intra-wiki"
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
-           Plugin</a>
+           Plugin</a></li>
+    <li><a class="intra-wiki"
+           href="#modules/parser/tng/parser.js">Parser: The Next Generation</a></li>
   </ul>
   <p>We also have some of our standard feeds documented:</p>
   <ul>
