nountypes are now specified by variable rather than name. Equality is currently checked by comparing _name properties, though... (I had trouble getting the deeper checks to work (see sameObject, sameNounType functions for my attempts.))

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -182,8 +182,8 @@ CmdUtils.CreateCommand({
     ja: ['検索する','検索して','検索しろ','探す','探して','探せ','けんさくする','けんさくして','けんさくしろ','さがす','さがして','さがせ']
   },
   arguments: [
-    {role: 'object', nountype: 'text'},
-    {role: 'instrument', nountype: 'search engine'}
+    {role: 'object', nountype: noun_arb_text},
+    {role: 'instrument', nountype: noun_type_searchengine}
   ],
   icon: "chrome://ubiquity/skin/icons/search.png",
   description: "Search using your installed search engines",
